2020-05-07  Release Manager

	* GCC 10.1.0 released.

2020-04-29  Jakub Jelinek  <jakub@redhat.com>

	* c-format.c (PP_FORMAT_CHAR_TABLE): Add %{ and %}.

2020-04-27  Jakub Jelinek  <jakub@redhat.com>

	PR c/94755
	* c-common.c (resolve_overloaded_builtin): Return error_mark_node for
	fncode == BUILT_IN_NONE before initialization of first_param.

2020-04-23  Marek Polacek  <polacek@redhat.com>

	PR c++/94733
	* c-attribs.c (find_tm_attribute): Use get_attribute_name instead of
	TREE_PURPOSE.

2020-04-14  Patrick Palka  <ppalka@redhat.com>

	PR c++/85278
	* c-pretty-print.c (pp_c_pointer) <case REFERENCE_TYPE>: Print a double
	ampersand if it's an rvalue reference type.

2020-04-13  Martin Sebor  <msebor@redhat.com>

	PR c/92326
	* c-pretty-print.c (c_pretty_printer::direct_abstract_declarator): Avoid
	printing array bound for flexible array members.

2020-04-13  Iain Sandoe  <iain@sandoe.co.uk>

	* c-cppbuiltin.c (c_cpp_builtins): Update coroutines builtin
	define, per n4861.

2020-04-02  Richard Biener  <rguenther@suse.de>

	PR c/94392
	* c-opts.c (c_common_post_options): Enable -ffinite-loops
	for -O2 and C++11 or newer.

2020-03-28  Patrick Palka  <ppalka@redhat.com>

	* c.opt: Add -fconcepts-diagnostics-depth.

2020-03-27  Martin Sebor  <msebor@redhat.com>

	PR c++/94346
	* c-attribs.c (handle_copy_attribute): Avoid passing expressions
	to decl_attributes.  Make handling of different kinds of entities
	more robust.

2020-03-27  Martin Sebor  <msebor@redhat.com>

	PR c++/94098
	* c-attribs.c (handle_access_attribute): Avoid setting TYPE_ATTRIBUTES
	here.

2020-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/91993
	* c-warn.c (warnings_for_convert_and_check): For expr and/or
	result being COMPOUND_EXPRs, skip to ultimate rhs.

2020-03-20  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/94072
	* c-common.c (c_common_type_for_mode): Before using a registered
	built-in type, check that the vectorness of the type matches
	the vectorness of the mode.
