@@ -1,3 +1,8 @@
+202-05-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/94968
+	* gcc.dg/pr94968.c: New test.
+
 2020-05-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/94951
